<resources>
    <string name="app_name">MVVM</string>
    <string name="title_note">Заголовок</string>
    <string name="text_note">Текст</string>
    <string name="save_button">Сохранить</string>
    <string name="about_info"><![CDATA[<p>Приложение создано <em>Медведевым Е.В.</em> в рамках курса <strong>обучения Android разработке</strong>]]></string>
    -->
    <string name="date_note">Дата</string>
    <string name="dialog_title">Информация</string>
    <string name="dialog_title_geo">Геолокация</string>
    <string name="dialog_text">Вы ТОЧНО хотите узнать это?</string>
    <string name="dialog_text_geo">Для корректной работы включите сервисы геолокации</string>
    <string name="dialog_positive_button">Да.</string>
    <string name="dialog_negative_button">Что-то перехотелось…</string>
    <string name="accessibility_info">информации о приложении</string>
    <string name="accessibility_add">добавления новой заметки</string>
    <string name="accessibility_save_note">сохранения новой заметки</string>
    <string name="accessibility_share">поделиться заметкой</string>
    <string name="success_save_toast"> Заметка успешно сохранена </string>
    <string name="error_save_toast"> Ошибка сохрнения заметки</string>
    <string name="btn_download">Скачать из сети</string>
    <string name="error_download">Ошибка загрузки</string>
    <string name="delete_note">удалить заметку</string>
    <string name="locationButton">Узнать местоположение</string>
    <string name="htmlButton">Посетить сайт</string>
    <string name="htmlText" translatable="false"><![CDATA[<em>Координаты</em>]]></string>
    <string name="permission_info">Необходим доступ к геолокации</string>
    <string name="gps_processing">Получение данных</string>
    <string name="gps_disabled">Включите местоположение</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>