<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/title_note"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:layout_gravity="start"
        android:hint="@string/text_note"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        android:focusable="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_button"
        android:contentDescription="@string/accessibility_save_note"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        android:focusable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>