<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ShowNoteFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/noteTitleFragment"
            style="@style/TextStyle.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/title_note" />

        <TextView
            android:id="@+id/noteDateFragment"
            style="@style/TextStyle.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/date_note" />

        <TextView
            android:id="@+id/noteTextFragment"
            style="@style/TextStyle.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="start"
            android:text="@string/text_note" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:clickable="true"
        android:contentDescription="@string/accessibility_share"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_margin="32dp"
        android:clickable="true"
        android:contentDescription="@string/delete_note"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_delete" />

</FrameLayout>