<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:theme="@style/Toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageButtonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="8dp"
        android:contentDescription="@string/accessibility_info"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:focusable="true"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="8dp"
        app:layout_constraintRight_toLeftOf="@+id/imageButtonAbout"
        android:contentDescription="@string/accessibility_add"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:focusable="true"/>

    <androidx.appcompat.widget.SearchView
        style="@style/TextStyle.Normal"
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    </androidx.appcompat.widget.Toolbar>



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>